
AC_INIT(deepsolver, 0.1.5, msp@altlinux.org)
AM_INIT_AUTOMAKE([-Wall foreign])

if test "x$CFLAGS" == 'x'; then
   CFLAGS='-O2'
fi

if test "x$CXXFLAGS" == 'x'; then
   CXXFLAGS='-O2'
fi

LT_RELEASE=0
LT_CURRENT=0
LT_REVISION=0
LT_AGE=0

AC_PROG_CC
AC_PROG_CXX
LT_INIT
AC_PROG_LIBTOOL

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_SUBST(DEEPSOLVER_CXXFLAGS, '-Wall -pedantic -fpic -fno-rtti -DFIXME_DATADIR=\"$(pkgdatadir)\"')
AC_SUBST(DEEPSOLVER_INCLUDES, '-I$(top_srcdir)/lib')

AC_CONFIG_FILES([
  Makefile
  lib/Makefile
  programs/Makefile
])

AC_OUTPUT

AC_CONFIG_MACRO_DIR([m4])
